# chesspp

./: CMakeLists.txt  README.md  main.cpp
docs/: design.md
include/: Logger.hpp
src/: main.cpp
